# sql-diagram

./: .gitignore  README.md  pyproject.toml
examples/: draw_complex_sql.py
src/: __init__.py  drawing.py
src/core/: cte.py  query.py  utils.py
